# pandora_vision

./: .gitignore  .jenkins.yml  README.md
pandora_vision_annotator/: CMakeLists.txt  package.xml
pandora_vision_annotator/launch/: pandora_vision_annotator.launch
pandora_vision_annotator/scripts/: camera_info_parser.py  camera_info_parser.py~  images_to_bag.py  images_to_bag.py~
pandora_vision_annotator/src/: annotator_connector.cpp  annotator_controller.cpp
pandora_vision_annotator/ui/: pandora_annotator.ui
pandora_vision_common/: CMakeLists.txt  package.xml
pandora_vision_common/test/: CMakeLists.txt
pandora_vision_datamatrix/: CMakeLists.txt  package.xml
pandora_vision_datamatrix/config/: datamatrix_params.yaml  datamatrix_topics.yaml
pandora_vision_datamatrix/launch/: datamatrix_node.launch  pandora_vision_datamatrix.launch  pandora_vision_datamatrix_standalone.launch
pandora_vision_datamatrix/src/: datamatrix_detection.cpp  datamatrix_detector.cpp  datamatrix_handler.cpp  datamatrix_node.cpp  datamatrix_postprocessor.cpp
pandora_vision_datamatrix/test/: CMakeLists.txt
pandora_vision_face/: .gitignore  CMakeLists.txt  package.xml
pandora_vision_face/data/: csv.ext
pandora_vision_face/launch/: faceNode.launch  face_node.launch
pandora_vision_face/src/: face_detection.cpp  face_detector.cpp  face_node.cpp  model_trainer.cpp  skin_detection.cpp  skin_detector.cpp  time_calculator.cpp
pandora_vision_hazmat/: :w  CMakeLists.txt  input.xml  package.xml
pandora_vision_hazmat/config/: Display.cfg
pandora_vision_hazmat/data/: .gitignore  extra_files.yaml  input.txt
pandora_vision_hazmat/launch/: cam_launch.launch  hazmatNode.launch  hazmatTrainNode.launch  hazmat_node.launch  hazmat_node_standalone.launch  hazmat_test.launch  hazmat_train_node.launch  pandora_vision_hazmat.launch  pandora_vision_hazmat_standalone.launch
pandora_vision_hazmat/patterns/: enter1.png.sift  enter10.png.sift  enter11.png.sift  enter12.png.sift  enter13.png.sift  enter14.png.sift  enter15.png.sift  enter16.png.sift  enter17.png.sift  enter18.png.sift  enter19.png.sift  enter2.png.sift  enter3.png.sift  enter4.png.sift  enter5.png.sift  enter6.png.sift  enter7.png.sift  enter8.png.sift  enter9.png.sift
pandora_vision_hazmat/src/: detector_factory.cpp  feature_matching_detector.cpp  hazmat_detection.cpp  hazmat_detector.cpp  hazmat_node.cpp  hazmat_trainer.cpp  imgfeatures.cpp  kdtree.cpp  main.cpp  match.cpp  minpq.cpp  multiple_flann_matcher.cpp  orb_detector.cpp  orb_hazmat_detector.cpp  planar_object_detector.cpp  sift.cpp  sift_detector.cpp  sift_hazmat_detector.cpp  siftfeat.cpp  simple_hazmat_detector.cpp  surf_detector.cpp  surf_hazmat_detector.cpp  utils.cpp  xform.cpp
pandora_vision_hazmat/test/: CMakeLists.txt
pandora_vision_hazmat/training_data/: .gitignore
pandora_vision_hole/: CMakeLists.txt  holeFindNode.launch  hole_find_node.launch  nodelet_plugins.xml  package.xml
pandora_vision_hole/cfg/: synchronizer_node_topics.yaml  temperatures_node_topics.yaml  thermal_node_matching_variables.yaml  thermal_node_topics.yaml
pandora_vision_hole/launch/: hole_find_node.launch  pandora_vision_hole.launch  pandora_vision_hole_standalone.launch  pandora_vision_hole_thermal.launch  pandora_vision_temperatures_standalone.launch
pandora_vision_hole/scripts/: rgb_depth_thermal_synchronizer.py
pandora_vision_hole/src/: hole_detection.cpp  hole_detector.cpp  hole_message_conversions.cpp  pattern.cpp  textureFilter.cpp  texture_filter.cpp  thing.cpp  tracker.cpp  trackerChain.cpp  tracker_chain.cpp  trainTexture.cpp
pandora_vision_hole/test/: CMakeLists.txt
pandora_vision_hole_detector/: CMakeLists.txt  package.xml
pandora_vision_hole_detector/cfg/: depth_cfg.cfg  filters_thresholds_cfg.cfg  global_cfg.cfg  hole_fusion_cfg.cfg  kinect.cfg  rgb_cfg.cfg  validity_cfg.cfg
pandora_vision_hole_detector/config/: hole_fusion_node_topics.yaml  synchronizer_node_topics.yaml
pandora_vision_hole_detector/launch/: kinect_node.launch  kinect_standalone.launch  pandora_vision_hole_detector.launch  pandora_vision_hole_detector_kinect.launch  pandora_vision_hole_detector_standalone.launch  rgb_node_standalone.launch  synchronizer_depth.launch  synchronizer_depth_hole_fusion.launch  synchronizer_depth_rgb_hole_fusion.launch
pandora_vision_hole_detector/test/: CMakeLists.txt
pandora_vision_hole_exploration/: CMakeLists.txt  interfaces.xml  package.xml
pandora_vision_hole_exploration/cfg/: hole_fusion_node_topics.yaml  synchronizer_node_topics.yaml
pandora_vision_hole_exploration/launch/: pandora_vision_hole_exploration.launch  pandora_vision_hole_exploration_standalone.launch
pandora_vision_hole_exploration/test/: CMakeLists.txt  CMakeLists.txt.orig
pandora_vision_landoltc/: CMakeLists.txt  landoltC_node.launch  landoltc_node.launch  package.xml
pandora_vision_landoltc/cfg/: landoltc_cfg.cfg  landoltc_topics.yaml
pandora_vision_landoltc/launch/: landoltc3d_node.launch  landoltc_2d_node.launch  landoltc_3d_node.launch  landoltc_3d_node_standalone.launch  landoltc_node.launch  pandora_vision_landoltc_2d.launch  pandora_vision_landoltc_2d_standalone.launch  predator-landoltc3d.launch  predator_landoltc_3d_node_standalone.launch
pandora_vision_landoltc/src/: landoltC_detection.cpp  landoltc3d_detection.cpp  landoltc3d_detector.cpp  landoltc_detection.cpp  landoltc_detector.cpp  landoltc_node.cpp  landoltc_parameters.cpp
pandora_vision_landoltc/test/: CMakeLists.txt  accuracy_test.py  landoltc_test.launch
pandora_vision_launchers/: package.xml
pandora_vision_launchers/launch/: all_nodes.launch  general_params.launch  usbCam.launch  usb_cam.launch  vision_cameras.launch  webNodeStandAlone.launch  web_node_standAlone.launch  web_node_standalone.launch
pandora_vision_obstacle/: CMakeLists.txt  nodelet_plugins.xml  package.xml
pandora_vision_predator/: CMakeLists.txt  model  package.xml
pandora_vision_qrcode/: CMakeLists.txt  package.xml  qrcode_node.launch
pandora_vision_victim/: CMakeLists.txt  package.xml
pandora_vision_victim/data/: .gitignore  (+2 more)
(+977 files in other folders)
