<?xml version="1.0"?>
<package>
  <name>pandora_vision_annotator</name>
  <version>0.1.0</version>
  <description>A gui in Qt for annotation purposes for the PANDORA vision packages.</description>

  <maintainer email="etsardou@gmail.com">Manos Tsardoulias</maintainer>

  <license>GPLv3</license>
  
  <author>Manos Tsardoulias</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libqt4</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
