<?xml version="1.0"?>
<package>
  <name>pandora_vision_predator</name>
  <version>0.1.0</version>
  <description>The predator package</description>


  <maintainer email="elendorial@gmail.com">Victor Daropoulos</maintainer>


 
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslint</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  


</package>
